Se termina la interfaz gráfica y se divide para un mejor funcionamiento

--- a/ProyectoTiendas/src/main/java/PanelesConsulta/PanelPedido.form
+++ b/ProyectoTiendas/src/main/java/PanelesConsulta/PanelPedido.form
@@ -34,7 +34,7 @@
               <Component id="labelFecha" min="-2" pref="101" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="labelEstado" min="-2" pref="101" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="buttonEditar" min="-2" pref="93" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="buttonRecibido" min="-2" pref="94" max="-2" attributes="0"/>
