--- a/ProyectoTiendas/src/main/java/GUIAdmin/clienteBuscar.form
+++ b/ProyectoTiendas/src/main/java/GUIAdmin/clienteBuscar.form
@@ -139,6 +139,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="NUEVO CLIENTE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel30">
       <Properties>
