--- a/ProyectoTiendas/src/main/java/GUIAdmin/pedidoBuscar.form
+++ b/ProyectoTiendas/src/main/java/GUIAdmin/pedidoBuscar.form
@@ -16,15 +16,15 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="jTextField11" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel18" alignment="0" pref="934" max="32767" attributes="0"/>
-                          <Component id="jTextField11" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jComboBox8" alignment="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="jLabel18" pref="934" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
@@ -42,6 +42,10 @@
                               <Component id="jLabel22" min="-2" pref="300" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="jComboBox8" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
