--- a/ProyectoTiendas/src/main/java/Main/InicioAdmin.form
+++ b/ProyectoTiendas/src/main/java/Main/InicioAdmin.form
@@ -30,8 +30,8 @@
         <Menu class="javax.swing.JMenu" name="menuOpciones">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                <LineBorder/>
+              <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
+                <BevelBorder/>
               </Border>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
