--- a/ProyectoTiendas/src/main/java/GUIConsultas/PanelProducto.form
+++ b/ProyectoTiendas/src/main/java/GUIConsultas/PanelProducto.form
@@ -31,11 +31,11 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="labelNombre" min="-2" pref="265" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="labelFecha" min="-2" pref="110" max="-2" attributes="0"/>
+              <Component id="labelFabricante" min="-2" pref="110" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="labelEstado" min="-2" pref="110" max="-2" attributes="0"/>
+              <Component id="labelCantidad" min="-2" pref="110" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="labelEstado1" min="-2" pref="110" max="-2" attributes="0"/>
+              <Component id="labelPrecio" min="-2" pref="110" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="buttonEditar" min="-2" pref="93" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -49,11 +49,11 @@
           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
               <Component id="labelCodigo" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
               <Component id="labelNombre" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
-              <Component id="labelEstado" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+              <Component id="labelCantidad" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
               <Component id="buttonEditar" alignment="3" min="-2" max="-2" attributes="0"/>
               <Component id="buttonRecibido" alignment="3" min="-2" max="-2" attributes="0"/>
-              <Component id="labelFecha" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
-              <Component id="labelEstado1" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+              <Component id="labelFabricante" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+              <Component id="labelPrecio" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -77,7 +77,7 @@
         <Property name="text" type="java.lang.String" value="AUDIFONOS COLOR NEGRO DE GOMA"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="labelEstado">
+    <Component class="javax.swing.JLabel" name="labelCantidad">
       <Properties>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
@@ -90,13 +90,16 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="EDITAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonEditarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="buttonRecibido">
       <Properties>
         <Property name="text" type="java.lang.String" value="ELIMINAR"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="labelFecha">
+    <Component class="javax.swing.JLabel" name="labelFabricante">
       <Properties>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
@@ -105,7 +108,7 @@
         <Property name="text" type="java.lang.String" value="XIAOMI"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="labelEstado1">
+    <Component class="javax.swing.JLabel" name="labelPrecio">
       <Properties>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
